# tauri-waapi-demo

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
src/: index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs  waapi_client.rs
src-tauri/src/commands/: info.rs  mod.rs  project.rs  query.rs  subscription.rs
src/composables/: useObjectColumns.ts  usePaginatedTable.ts
src/features/waapi/: api.ts  constants.ts  types.ts
src/layouts/: Layout.vue
src/router/: index.ts  meta.d.ts  routes.ts
src/views/: HomeView.vue  ProjectView.vue  SubscriptionView.vue  WaqlView.vue  WwiseView.vue
