[package]
name = "tauri-waapi-demo"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_waapi_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true # 以较小的步骤编译二进制文件

[profile.release]
codegen-units = 1   # 允许 LLVM 执行更好的优化
lto = true          # 启用链接时优化
opt-level = "s"     # 优先考虑小的二进制文件大小（用 "3" 则优先速度）
panic = "abort"     # 通过禁用 panic 处理程序减少体积
strip = true        # 移除调试符号

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
waapi-rs = { git = "https://github.com/xmimu/waapi-rs.git", branch = "dev" }
tokio = { version = "1", features = ["full"] }
